--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-website",
+  "homepage": "https://CallMeHarsh.github.io/REACT_PF-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,9 +19,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-simplemde-editor": "^4.1.3",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "yarn": "^1.22.10"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
